lp price 签名
